# basiccrm

./: .dockerignore  DockerFile  Readme.md  fly.toml
backend/: Cargo.toml
backend/dbschema/: default.esdl  seed.esdl
backend/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql
backend/src/: customers.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: routes.rs
frontend/src/components/: customer_detail.rs  customers.rs  error.rs  mod.rs  nav_bar.rs  not_found.rs  progress_bar.rs
frontend/src/data/: mod.rs
