[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = {version = "0.6.18", features = ["headers", "query"]}
chrono = {version = "0.4.24", features = ["unstable-locales"]}
edgedb-derive = "0.4.0"
edgedb-protocol = "0.4.0"
edgedb-tokio = "0.3.0"
frontend = {path = "../frontend"}
opentelemetry = {version = "0.17.0", features = ["trace", "rt-tokio"]}
opentelemetry-otlp = {version = "0.10.0", features = ["http-proto", "reqwest-client", "tokio"]}
opentelemetry-semantic-conventions = "0.9"
reqwest = {version = "0.11.16"}
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.25.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["cors", "fs", "auth", "trace", "catch-panic"]}
tracing = "0.1"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.3.1", features = ["serde"]}
validator = {version = "0.16.0", features = ["derive"]}
